--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 LINES_PER_THREAD = 3;
 NUM_THREADS = 10;
 FILE_PATH = "src/resources/apache.log";
-
+COUNTRIES_DB ="src/resources/GeoLite2-Country_20240809/GeoLite2-Country.mmdb";
